--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div id="banner-grid" class="grid-container">
-        <a id="homenav" href="home.html">
+        <a id="homenav" href="index.html">
           <div id="banner-logo-grid" class="grid-container">
             <div id="placeholder-logo"></div>
             <div id="brand-name-grid" class="grid-container">
@@ -21,7 +21,7 @@
         </a>
 
         <div class="topnav flex-container">
-          <a class="navlink" href="home.html">Home</a>
+          <a class="navlink" href="index.html">Home</a>
           <a class="navlink" href="shop-dog.html">Shop Dog</a>
           <a class="navlink" href="shop-cat.html">Shop Cat</a>
           <a class="navlink" href="contact.html">Contact</a>
