minor style changes in product detail page

--- a/harness.html
+++ b/harness.html
@@ -90,7 +90,7 @@
             <label class="detail-label">Size:</label>
             <label class="selected-label">Select a size</label>
           </div>
-          <div id="size-selection" class="selection-option-grid grid-container">
+          <div id="size-selection" class="selection-option-flex flex-container">
             <label class="container">
               <input type="radio" checked="checked" name="size">
               <span class="checkmark">
@@ -124,7 +124,7 @@
             <label class="detail-label">Color:</label>
             <label class="selected-label">Select a color</label>
           </div>
-          <div id="color-selection" class="selection-option-grid grid-container">
+          <div id="color-selection" class="selection-option-flex flex-container">
             <label class="container">
               <input type="radio" checked="checked" name="color">
               <span class="checkmark" style="background-color: red"></span>
