added alt text, image credit, and styled cart icon

--- a/cart.html
+++ b/cart.html
@@ -1,4 +1,5 @@
 <!--cart.html-->
+<!--shopping cart icon credit: Fasil (https://freeicons.io/ios-edge/shopping-cart-icon-29332)-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,7 +27,9 @@
           <a class="navlink" href="shop-cat.html">Shop Cat</a>
           <a class="navlink" href="contact.html">Contact</a>
           <a class="navlink" href="about.html">About</a>
-          <a class="navlink active" href="cart.html">Cart</a>
+          <a class="navlink active" href="cart.html">
+            <img id="cart-icon" class="active" width="20" height="20" src="cart-icon.svg" alt="cart icon">
+          </a>
         </div>
       </div>
     </header>
