--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!--home.html-->
+<!--index.html-->
+<!--shopping cart icon credit: Fasil (https://freeicons.io/ios-edge/shopping-cart-icon-29332)-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -30,7 +31,9 @@
           <a class="navlink" href="shop-cat.html">Shop Cat</a>
           <a class="navlink" href="contact.html">Contact</a>
           <a class="navlink" href="about.html">About</a>
-          <a class="navlink" href="cart.html">Cart</a>
+          <a class="navlink" href="cart.html">
+            <img id="cart-icon" width="20" height="20" src="cart-icon.svg" alt="cart icon">
+          </a>
         </div>
       </div>
     </header>
