--- a/shop-cat.html
+++ b/shop-cat.html
@@ -1,4 +1,6 @@
 <!--shop-cat.html-->
+<!--shopping cart icon credit: Fasil (https://freeicons.io/ios-edge/shopping-cart-icon-29332)-->
+<!--image credit: Roberto Lopez ("https://images.unsplash.com/photo-1511754268731-ac0b89398b2c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fGRvZyUyMGNvbGxhcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60")-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,7 +28,9 @@
           <a class="navlink active" href="shop-cat.html">Shop Cat</a>
           <a class="navlink" href="contact.html">Contact</a>
           <a class="navlink" href="about.html">About</a>
-          <a class="navlink" href="cart.html">Cart</a>
+          <a class="navlink" href="cart.html">
+            <img id="cart-icon" width="20" height="20" src="cart-icon.svg" alt="cart icon">
+          </a>
         </div>
       </div>
     </header>
