added logo and restyled margins

--- a/harness.html
+++ b/harness.html
@@ -18,7 +18,7 @@
       <div id="banner-grid" class="grid-container">
         <a id="homenav" href="index.html">
           <div id="banner-logo-grid" class="grid-container">
-            <div id="placeholder-logo"></div>
+            <img id="logo-icon" height="50" width="50" src="logo-icon.png" alt="logo containing cat and dog under mountain">
             <div id="brand-name-grid" class="grid-container">
               <div id="brand-name">Muddy Paws</div>
               <div id="brand-slogan">Adventure Gear</div>
@@ -181,6 +181,9 @@
 
     <footer>
       <p>2021 Muddy Paws</p>
+      <div>
+        Logo icon made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div>
     </footer>
 
     
