--- a/harness.html
+++ b/harness.html
@@ -32,7 +32,7 @@
           <a class="navlink" href="shop-cat.html">Shop Cat</a>
           <a class="navlink" href="contact.html">Contact</a>
           <a class="navlink" href="about.html">About</a>
-          <a class="navlink" href="cart.html">
+          <a id="cart" class="navlink" href="cart.html">
             <img id="cart-icon" width="20" height="20" src="cart-icon.svg" alt="cart icon">
           </a>
         </div>
