--- a/harness.html
+++ b/harness.html
@@ -34,6 +34,7 @@
           <a class="navlink" href="about.html">About</a>
           <a id="cart" class="navlink" href="cart.html">
             <img id="cart-icon" width="20" height="20" src="cart-icon.svg" alt="cart icon">
+            <div id="cart-notification" style="visibility: hidden;"></div>
           </a>
         </div>
       </div>
