changed styling of product select details

--- a/harness.html
+++ b/harness.html
@@ -94,28 +94,28 @@
         <div id="size-selection-grid" class="selection-grid grid-container">
           <div>
             <label class="detail-label">Size:</label>
-            <label class="selected-label">Select a size</label>
+            <label id="selected-size" class="selected-label">Tiny</label>
           </div>
           <form id="size-selection" class="selection-option-flex flex-container">
-            <label class="container">
+            <label class="container" onmouseover="hoverSize('Tiny')" onmouseout="mouseOutSize()">
               <input type="radio" checked="checked" name="size" value="tiny">
               <span class="checkmark">
                 <div class="centered" style="text-align: center;">T</div>
               </span>
             </label>
-            <label class="container">
+            <label class="container" onmouseover="hoverSize('Small')" onmouseout="mouseOutSize()">
               <input type="radio" name="size" value="small">
               <span class="checkmark">
                 <div class="centered" style="text-align: center;">S</div>
               </span>
             </label>
-            <label class="container">
+            <label class="container" onmouseover="hoverSize('Medium')" onmouseout="mouseOutSize()">
               <input type="radio" name="size" value="medium">
               <span class="checkmark">
                 <div class="centered" style="text-align: center;">M</div>
               </span>
             </label>
-            <label class="container">
+            <label class="container" onmouseover="hoverSize('Large')" onmouseout="mouseOutSize()">
               <input type="radio" name="size" value="large">
               <span class="checkmark">
                 <div class="centered" style="text-align: center;">L</div>
@@ -128,22 +128,22 @@
         <div id="color-selection-grid" class="selection-grid grid-container">
           <div>
             <label class="detail-label">Color:</label>
-            <label class="selected-label">Select a color</label>
+            <label id="selected-color" class="selected-label">Strawberry</label>
           </div>
           <form id="color-selection" class="selection-option-flex flex-container">
-            <label class="container">
+            <label class="container" onmouseover="hoverColor('Strawberry')" onmouseout="mouseOutColor()">
               <input type="radio" checked="checked" name="color" value="strawberry">
               <span class="checkmark" style="background-color: red"></span>
             </label>
-            <label class="container">
+            <label class="container" onmouseover="hoverColor('Blackberry')" onmouseout="mouseOutColor()">
               <input type="radio" name="color" value="blackberry">
               <span class="checkmark" style="background-color: purple"></span>
             </label>
-            <label class="container">
+            <label class="container" onmouseover="hoverColor('Crazyberry')" onmouseout="mouseOutColor()">
               <input type="radio" name="color" value="crazyberry">
               <span class="checkmark" style="background-color: magenta;"></span>
             </label>
-            <label class="container">
+            <label class="container" onmouseover="hoverColor('Fire Orange')" onmouseout="mouseOutColor()">
               <input type="radio" name="color" value="fire-orange">
               <span class="checkmark" style="background-color: orange"></span>
             </label>
