added cart popup

--- a/harness.html
+++ b/harness.html
@@ -180,6 +180,10 @@
       </div>
     </div>
 
+    <div class="popup" style="visibility: hidden;">
+      <span class="popuptext" id="cart-popup">A Simple Popup!</span>
+    </div>
+
     <footer>
       <p>2021 Muddy Paws</p>
       <div>
